cambio img mapa

--- a/index.html
+++ b/index.html
@@ -241,8 +241,11 @@
                 <!-- Desktop -->
                 <source media="(min-width:1200px)" srcset="img/mapamundi1@2x.png"
                     alt="Mapa de centro america y latinoamerica en blanco, sobre un fondo azul. A los costados hay diferentes dibujos, simbolizando mamas, vagina, pastillas, menstruación y un pañuelo de la lucha por el aborto.">
+                <!-- Tablet -->
+                <source media="(min-width:1200px)" srcset="img/Cuadro-Mapa-mundi-1200px.png"
+                    alt="Mapa de centro america y latinoamerica en blanco, sobre un fondo azul. A los costados hay diferentes dibujos, simbolizando mamas, vagina, pastillas, menstruación y un pañuelo de la lucha por el aborto.">
                 <!-- Mobile  -->
-                <img src="img/mapamundi.png"
+                <img src="img/Cuadro-Mapa-mundi-768px.png"
                     alt="Mapa de centro america y latinoamerica en blanco, sobre un fondo azul. A los costados hay diferentes dibujos, simbolizando mamas, vagina, pastillas, menstruación y un pañuelo de la lucha por el aborto.">
             </picture>
 
