tarjetas beneficios desktop

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <figcaption>Mentorías a cargo de personas expertas en innovación social y emprendimiento.
                     </figcaption>
                 </figure>
-                <figure class="tarjeta">
+                <figure class="tarjeta yellow">
                     <picture class="amarillo">
                         <!-- Desktop -->
                         <source media="(min-width:1200px)" srcset="img/lapiz-regla@2x.png"
@@ -158,7 +158,7 @@
                     <figcaption>Desarrollo de tu red de contactos con otras empresas y organizaciones de la región para
                         potenciar tu impacto.</figcaption>
                 </figure>
-                <figure class="tarjeta">
+                <figure class="tarjeta yellow">
                     <picture class="amarillo">
                         <!-- Desktop -->
                         <source media="(min-width:1200px)" srcset="img/estrella-mas@2x.png"
