desktop primer version

--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
         </section>
         <section class="redes-sociales-footer">
             <ul>
-                <li style="display: none;"><a href="https://www.linkedin.com/company/69231220/admin/"><img src=""
+                <li><a href="https://www.linkedin.com/company/69231220/admin/" target="_blank"><img src="img/linkedin.svg"
                             alt="link a linkedin"></a></li>
-                <li><a href="https://www.facebook.com/IniciativaIDEA/"><img src="img/facebook.svg"
+                <li><a href="https://www.facebook.com/IniciativaIDEA/" target="_blank"><img src="img/facebook.svg"
                             alt="link a facebook"></a></li>
-                <li><a href="https://twitter.com/IniciativaIDEA"><img src="img/twitter.svg" alt="link a twitter"></a>
+                <li><a href="https://twitter.com/IniciativaIDEA" target="_blank"><img src="img/twitter.svg" alt="link a twitter"></a>
                 </li>
-                <li><a href="https://www.instagram.com/iniciativaidea/"><img src="img/instagram.svg"
+                <li><a href="https://www.instagram.com/iniciativaidea/" target="_blank"><img src="img/instagram.svg"
                             alt="link a instagram"></a></li>
             </ul>
         </section>
