--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
                 < Idea Start <br> <span> 2.0 </span> />
             </h1>
         </section>
-
-        <section class="days-counter">
-            <span id="countdown" class="timer" style="display: none;"></span>
-        </section>
-
+        <div class="main-counter-container">
+            <section id="counter">
+                <div id="div-uno"></div>
+                <div id="div-dos"></div>
+                <div id="div-tres"></div>
+                <div id="div-cuatro"></div>
+            </section>
+        </div>
         <section class="postulate">
             <a href="https://iniciativaidea.org/idea-start/#formulario-inscripcion-idea"
                 class="postulate-ahora">¡POSTULA AHORA!</a>
@@ -190,7 +193,7 @@
             </p>
             <article class="tarjetas-numeros">
                 <div class="tarjeta">
-                   <span>1</span>
+                    <span>1</span>
                     <figcaption>Aceleración de sus modelos de negocio
                     </figcaption>
                 </div>
@@ -280,11 +283,12 @@
         </section>
         <section class="redes-sociales-footer">
             <ul>
-                <li><a href="https://www.linkedin.com/company/69231220/admin/" target="_blank"><img src="img/linkedin.svg"
-                            alt="link a linkedin"></a></li>
+                <li><a href="https://www.linkedin.com/company/69231220/admin/" target="_blank"><img
+                            src="img/linkedin.svg" alt="link a linkedin"></a></li>
                 <li><a href="https://www.facebook.com/IniciativaIDEA/" target="_blank"><img src="img/facebook.svg"
                             alt="link a facebook"></a></li>
-                <li><a href="https://twitter.com/IniciativaIDEA" target="_blank"><img src="img/twitter.svg" alt="link a twitter"></a>
+                <li><a href="https://twitter.com/IniciativaIDEA" target="_blank"><img src="img/twitter.svg"
+                            alt="link a twitter"></a>
                 </li>
                 <li><a href="https://www.instagram.com/iniciativaidea/" target="_blank"><img src="img/instagram.svg"
                             alt="link a instagram"></a></li>
