mapamundi agregado desktop

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             </article>
             <picture>
                 <!-- Desktop -->
-                <source media="(min-width:1200px)" srcset="img/mapamundi1@2x.png"
+                <source media="(min-width:1200px)" srcset="img/Cuadro-Mapa-mundi-DESKTOP.png"
                     alt="Mapa de centro america y latinoamerica en blanco, sobre un fondo azul. A los costados hay diferentes dibujos, simbolizando mamas, vagina, pastillas, menstruación y un pañuelo de la lucha por el aborto.">
                 <!-- Tablet -->
                 <source media="(min-width:1200px)" srcset="img/Cuadro-Mapa-mundi-1200px.png"
