--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <section class="idea-dospuntocero">
             <h1>
-                < Idea Start <br> <span> 2.0 </span> />
+                < Reto <br> Idea Start <br> <span> 2.0 </span> />
             </h1>
         </section>
         <div class="main-counter-container">
