--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <main>
         <section class="top-main">
-            <h3>¿Tienes una startup que busca generar impacto sobre los desafío de salud y derechos reproductivos en
+            <h3>¿Tienes una startup que busca generar impacto sobre los desafíos de salud y derechos reproductivos en
                 América Latina y el Caribe?</h3>
             <h6>¡Puedes ser una de las startups <br> #HackersParaElBien!</h6>
         </section>
