agregados titulos de fase 1 y fase 2

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
             <h2>¿CÓMO FUNCIONA EL RETO IDEA START 2.0?</h2>
             <article class="funcionamiento-camino">
                 <div>
+                    <span style="text-decoration: underline;"><i>FASE 1</i></span>
                     <span>Postulación</span>
                     <p>23 de octubre al 20 de noviembre del 2022</p>
                 </div>
@@ -232,6 +233,11 @@
                     <p>28 de noviembre al 2 de diciembre del 2022</p>
                 </div>
                 <div>
+                    <span>Presentación de Pitch <br> y selección para siguiente fase</span>
+                    <p>2 de diciembre del 2022</p>
+                </div>
+                <div>
+                    <span style="text-decoration: underline;"><i>FASE 2</i></span>
                     <span>Programa de prototipado</span>
                     <p>Enero 2023 (dura 1 semana) </p>
                 </div>
