added logo partners media

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <!-- Desktop -->
                 <!-- <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea"> -->
                 <!-- Mobile  -->
-                <img src="img/logo.png" alt="logo-idea">
+                <img src="img/idea-logo.svg" alt="logo-idea" class="logo-idea">
             </picture>
         </a>
         <a href="https://www.impaqto.net/" target="_blank">
@@ -266,6 +266,27 @@
             <a href="https://iniciativaidea.org/idea-start/#formulario-inscripcion-idea"
                 class="postulate-ahora">¡POSTULA AHORA!</a>
         </section>
+        <section class="media-partners" id="partners">
+            <p>Media Partners</p>
+            <article>
+                <img src="img/logos/logos-mediapartners_01.png" alt="">
+                <img src="img/logos/logos-mediapartners_02.png" alt="">
+                <img src="img/logos/logos-mediapartners_03.png" alt="">
+                <img src="img/logos/logos-mediapartners_04.png" alt="">
+                <img src="img/logos/logos-mediapartners_05.png" alt="">
+                <img src="img/logos/logos-mediapartners_06.png" alt="">
+                <img src="img/logos/logos-mediapartners_07.png" alt="">
+                <img src="img/logos/logos-mediapartners_08.png" alt="">
+                <img src="img/logos/logos-mediapartners_09.png" alt="">
+                <img src="img/logos/logos-mediapartners_10.png" alt="">
+                <img src="img/logos/logos-mediapartners_11.png" alt="">
+                <img src="img/logos/logos-mediapartners_12.png" alt="">
+                <img src="img/logos/logos-mediapartners_13.png" alt="">
+                <img src="img/logos/logos-mediapartners_14.png" alt="">
+                <img src="img/logos/logos-mediapartners_15.png" alt="">
+            </article>
+
+        </section>
     </main>
 
     <footer>
@@ -275,7 +296,7 @@
                     <!-- Desktop -->
                     <!-- <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea"> -->
                     <!-- Mobile  -->
-                    <img src="img/logo.png" alt="logo-idea">
+                    <img src="img/idea-logo.svg" alt="logo-idea" class="logo-idea">
                 </picture>
             </a>
             <a href="https://www.impaqto.net/" target="_blank">
