changes for the deadline to postulate

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img src="img/impaqto.png" alt="logo-impaqto" class="logo-impaqto">
             </picture>
         </a>
-        <section class="postula-ahora-header">
+        <section class="postula-ahora-header" style="display: none;">
             <a href="https://iniciativaidea.org/idea-start/#formulario-inscripcion-idea"
                 class="postulate-ahora">¡POSTULA AHORA!</a>
         </section>
@@ -57,7 +57,7 @@
         </div>
         <section class="postulate">
             <a href="https://iniciativaidea.org/idea-start/#formulario-inscripcion-idea"
-                class="postulate-ahora">¡POSTULA AHORA!</a>
+                class="postulate-ahora" style="display: none;">¡POSTULA AHORA!</a>
             <article>
                 <picture>
                     <!-- Desktop -->
@@ -264,7 +264,7 @@
                 en América Latina?</p>
             <p>Conviértete en una de las startups #HackersParaElBien.</p>
             <a href="https://iniciativaidea.org/idea-start/#formulario-inscripcion-idea"
-                class="postulate-ahora">¡POSTULA AHORA!</a>
+                class="postulate-ahora" style="display: none;">¡POSTULA AHORA!</a>
         </section>
         <section class="media-partners" id="partners">
             <p>Media Partners</p>
