compressed images and cleaned up repo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/rim3dvc.css">
-    <script src="js/main.js"></script>
+    <script src="js/main.js?version=1"></script>
     <title>Idea Start 2.0</title>
     <link rel="stylesheet" href="style.min.css">
 </head>
@@ -15,17 +15,11 @@
     <header>
         <a href="https://iniciativaidea.org/" target="_blank">
             <picture>
-                <!-- Desktop -->
-                <!-- <source media="(min-width:1200px)" srcset="img/logo@2x.png" alt="logo-idea"> -->
-                <!-- Mobile  -->
                 <img src="img/idea-logo.svg" alt="logo-idea" class="logo-idea">
             </picture>
         </a>
         <a href="https://www.impaqto.net/" target="_blank">
             <picture>
-                <!-- Desktop
-                <source media="(min-width:1200px)" srcset="img/impaqto@2x.png" alt="logo-impaqto"> -->
-                <!-- Mobile  -->
                 <img src="img/impaqto.png" alt="logo-impaqto" class="logo-impaqto">
             </picture>
         </a>
