--- a/index.html
+++ b/index.html
@@ -5,7 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="msapplication-TileImage" content="https://www.ideastart.org/img/apple-icon-114x114.png">
+    <meta name="theme-color" content="#000000">
+    <meta name="description" content="Idea Start 2.0" />
+    <meta property="og:image" content="https://www.ideastart.org/img/favicon-600x600.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
+    <meta property="og:description" content="Idea Start 2.0">
+    <meta property="og:locale" content="es">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ideastart.org/" />
     <link rel="stylesheet" href="https://use.typekit.net/rim3dvc.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <script src="js/main.js?version=1"></script>
     <title>Idea Start 2.0</title>
     <link rel="stylesheet" href="style.min.css">
@@ -23,17 +52,17 @@
                 <img src="img/impaqto.png" alt="logo-impaqto" class="logo-impaqto">
             </picture>
         </a>
-        <section class="postula-ahora-header" style="display: none;">
-            <a href="https://iniciativaidea.org/idea-start/#formulario-inscripcion-idea"
-                class="postulate-ahora">¡POSTULA AHORA!</a>
+        <section class="postula-ahora-header" >
+            <a href="https://iniciativaidea.org/idea-start"
+                class="postulate-ahora">¡CONOCE MÁS!</a>
         </section>
     </header>
 
     <main>
         <section class="top-main">
-            <h3>¿Tienes una startup que busca generar impacto sobre los desafíos de salud y derechos reproductivos en
-                América Latina y el Caribe?</h3>
-            <h6>¡Puedes ser una de las startups <br> #HackersParaElBien!</h6>
+            <h3>Gracias a todas las startups postulantes para generar impacto sobre los desafíos de salud y derechos
+                reproductivos en América Latina y el Caribe.</h3>
+            <h6>#HackersParaElBien!</h6>
         </section>
 
         <section class="idea-dospuntocero">
@@ -50,8 +79,8 @@
             </section>
         </div>
         <section class="postulate">
-            <a href="https://iniciativaidea.org/idea-start/#formulario-inscripcion-idea"
-                class="postulate-ahora" style="display: none;">¡POSTULA AHORA!</a>
+            <a href="https://iniciativaidea.org/idea-start" class="postulate-ahora"
+                >¡CONOCE MÁS!</a>
             <article>
                 <picture>
                     <!-- Desktop -->
@@ -72,10 +101,9 @@
                     familias y sus países. <br><br> En <span> IDEA Start </span> queremos impulsar a las startups que
                     buscan generar
                     impacto sobre
-                    los desafíos de salud y derechos reproductivos en América Latina. <br>¿Tu startup busca hackear la
-                    realidad
-                    a favor de que más personas tengan un correcto acceso a salud y al cumplimiento de sus derechos
-                    reproductivos? <br> Tu momento ha llegado, <span> ¡súmate al reto y postula tu startup!</span></p>
+                    los desafíos de salud y derechos reproductivos en América Latina. <br>Buscamos startups que busquen
+                    hackear la realidad a favor de que más personas tengan un correcto acceso a salud y al cumplimiento
+                    de sus derechos reproductivos.</p>
             </article>
         </section>
 
@@ -254,11 +282,11 @@
 
         </section>
         <section class="tienes-una-startup">
-            <p class="tienes-destacado">¿Tienes una startup que desea generar impacto en salud y derechos reproductivos
-                en América Latina?</p>
-            <p>Conviértete en una de las startups #HackersParaElBien.</p>
-            <a href="https://iniciativaidea.org/idea-start/#formulario-inscripcion-idea"
-                class="postulate-ahora" style="display: none;">¡POSTULA AHORA!</a>
+            <p class="tienes-destacado">Entérate cómo lograr que tu startup genere impacto en la salud y los derechos
+                reproductivos en América Latina.</p>
+            <p>#HackersParaElBien.</p>
+            <a href="https://iniciativaidea.org/idea-start" class="postulate-ahora"
+                >¡CONOCE MÁS!</a>
         </section>
         <section class="media-partners" id="partners">
             <p>Media Partners</p>
